2007-03-01  Akim Demaille  <demaille@gostai.com>

	* urbi-dirs.m4 (_URBI_DIRS): Fix default value display.

2007-03-01  Akim Demaille  <akim.demaille@free.fr>

	Force VERBOSE for the test suite
	Until distcheck is invoked with VERBOSE too on the BF.
	* check.mk: here.

2007-02-21  Akim Demaille  <demaille@gostai.com>

	Don't use -relax-branch
	* urbi-prog-cxx.m4: Do not compute PARSER_CXXFLAGS.

2007-02-20  Akim Demaille  <demaille@gostai.com>

	bison++: Preserve *output on failure
	* bison++.in: Save it instead of leaving the previous one.

2007-02-20  Akim Demaille  <demaille@gostai.com>

	Count xpasses
	* check.mk (failures): Count fails and xpasses.
	Use it.

2007-02-19  Akim Demaille  <akim.demaille@free.fr>

	svn-externals: svn up -N
	* svn-externals: Run it for updated host dirs.

2007-02-15  Akim Demaille  <akim@lrde.epita.fr>

	Xpass triggers the verbose display
	* check.mk: here.

2007-02-15  Akim Demaille  <akim@lrde.epita.fr>

	Fix exit for test suites
	* check.mk: Stupid novice typo: use $$ for shell variables.
	* svn-externals.mk (*-ci-ci): New.

2007-02-15  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add ORBIX autodetection.
	* urbi-with-orbix.m4: Add macro. New.

2007-02-15  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add OpenHRP SDK detection.
	* urbi-with-openhrp.m4: Add macro. New.

2007-02-15  Akim Demaille  <akim@lrde.epita.fr>

	Fix xpass handling
	* check.mk: XPASSes are failures.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Use another green for XFAIL
	* check.mk: here.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Don't ignore failures
	* check.mk: Fix a typo: $? => $$?.

2007-02-12  Akim Demaille  <akim@lrde.epita.fr>

	* svn-externals.mk (<external>-upci): New.

2007-02-10  Akim Demaille  <akim.demaille@free.fr>

	* svn-externals (svn_externals_update_stream): Take the host
	dir path into account.

2007-02-10  Akim Demaille  <akim.demaille@free.fr>

	svn-externals: Don't up the host dir